# fbxcel

./: CHANGELOG.md  Cargo.toml
crates/async-position-reader/: Cargo.toml
crates/async-position-reader/src/: inner_reader.rs  lib.rs  position_reader.rs
crates/byte-order-reader/: Cargo.toml
crates/byte-order-reader/src/: lib.rs  reader.rs  util.rs
crates/fbxcel-dom/: Cargo.toml
crates/fbxcel-dom/src/: lib.rs
crates/fbxcel-dom/src/any/: error.rs  mod.rs
crates/fbxcel-dom/src/v7400/: definition.rs
crates/fbxcel-dom/src/v7400/connection/: cache.rs
crates/fbxcel-dom/src/v7400/data/mesh/: layer.rs
crates/fbxcel-dom/src/v7400/data/mesh/layer/: common.rs  normal.rs
crates/fbxcel-dom/src/v7400/document/: loader.rs  mod.rs
crates/fbxcel-dom/src/v7400/error/: connection.rs  load.rs  object.rs
crates/fbxcel-dom/src/v7400/object/: cache.rs  mod.rs
crates/fbxcel-dom/src/v7400/object/property/: loaders.rs  node.rs  properties.rs
crates/fbxcel-dom/src/v7400/object/property/loaders/: primitive.rs
crates/fbxcel-low/: Cargo.toml
crates/fbxcel-low/src/: error.rs  fbx_header.rs  lib.rs  version.rs
crates/fbxcel-low/src/v7400/: array_attribute.rs  fbx_footer.rs  mod.rs  node_header.rs  special_attribute.rs
crates/fbxcel-low/src/v7400/attribute/: mod.rs  types.rs  value.rs
crates/fbxcel-pull-parser/: Cargo.toml
crates/fbxcel-pull-parser/src/: lib.rs
crates/fbxcel-pull-parser/src/any/: error.rs  mod.rs
crates/fbxcel-pull-parser/src/error/: data.rs  mod.rs  operation.rs  warning.rs
crates/fbxcel-pull-parser/src/v7400/: event.rs  mod.rs  parser.rs  read.rs
crates/fbxcel-pull-parser/src/v7400/attribute/: array.rs  iter.rs  loader.rs  mod.rs
crates/fbxcel-pull-parser/src/v7400/attribute/loaders/: direct.rs  single.rs  types.rs
crates/fbxcel-tree/: Cargo.toml
crates/fbxcel-tree/src/any/: error.rs  mod.rs
crates/fbxcel-tree/src/v7400/: loader.rs  macros.rs  node.rs
crates/fbxcel-tree/src/v7400/node/: data.rs  handle.rs
crates/fbxcel-writer/: Cargo.toml
crates/fbxcel-writer/src/: lib.rs
crates/fbxcel-writer/src/v7400/binary/: attributes.rs  macros.rs  mod.rs  stream_position.rs
crates/fbxcel-writer/src/v7400/binary/attributes/: array.rs
examples/: dump-pull-parser-events.rs  load-dom.rs  load-tree.rs
src/: lib.rs
src/low/v7400/: array_attribute.rs  mod.rs  node_header.rs  special_attribute.rs
src/low/v7400/attribute/: types.rs
src/pull_parser/: mod.rs  version.rs
src/pull_parser/any/: mod.rs
src/pull_parser/error/: mod.rs  operation.rs
src/pull_parser/v7400/: event.rs  mod.rs  parser.rs  read.rs
src/pull_parser/v7400/attribute/: array.rs  iter.rs  loader.rs  mod.rs
src/pull_parser/v7400/attribute/loaders/: direct.rs  mod.rs  single.rs  types.rs
src/tree/any/: error.rs  mod.rs
src/tree/v7400/: error.rs  loader.rs  macros.rs  mod.rs
src/tree/v7400/node/: data.rs  handle.rs
src/writer/v7400/binary/: attributes.rs  error.rs  macros.rs  mod.rs
src/writer/v7400/binary/attributes/: array.rs
tests/: missing-and-extra-node-end-marker.rs  write-and-parse-v7400-binary.rs  write-tree-and-parse-v7400-binary.rs
tests/v7400/: writer.rs
