[package]
name = "fbxcel"
version = "0.7.0"
authors = ["YOSHIOKA Takuma <lo48576@hard-wi.red>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Excellent FBX library"
repository = "https://github.com/lo48576/fbxcel"
keywords = ["FBX", "3D", "model"]
categories = ["parser-implementations"]

[package.metadata.docs.rs]
all-features = true
# See <https://docs.rs/about/builds>.
#
# Didn't create `docsrs` feature, since this (`#[doc(cfg(feature = ...))]`)
# depends on nightly feature and it prevents `cargo doc --all-features` from
# running with stable rust toolchain.
# See <https://doc.rust-lang.org/rustdoc/unstable-features.html#extensions-to-the-doc-attribute>
# for unstable `#[doc(cfg(...))]` attribute.
rustc-args = ["--cfg", "docsrs"]

[workspace]
members = [
    "crates/byte-order-reader",
    "crates/async-position-reader",
    "crates/fbxcel-low",
    "crates/fbxcel-pull-parser",
    "crates/fbxcel-tree",
    "crates/fbxcel-writer"
]

[features]
default = []

tree = [ "fbxcel-tree", "fbxcel-writer/tree" ]
writer = [ "fbxcel-writer" ]

[dependencies]
fbxcel-low = { path = "./crates/fbxcel-low" }
fbxcel-pull-parser = { path = "./crates/fbxcel-pull-parser" }
fbxcel-tree = { path = "./crates/fbxcel-tree", optional = true }
fbxcel-writer = { path = "./crates/fbxcel-writer", optional = true }


[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }
env_logger = "0.9.0"
anyhow = "1"
futures-lite = "1.2"

[badges]
maintenance = { status = "passively-maintained" }
travis-ci = { repository = "lo48576/fbxcel" }

[[example]]
name = "dump-pull-parser-events"

[[example]]
name = "load-tree"
required-features = ["tree"]
