[package]
name = "fbxcel-dom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbxcel-tree = { path = "../fbxcel-tree" }
fbxcel-pull-parser = { path = "../fbxcel-pull-parser" }
fbxcel-low = { path = "../fbxcel-low" }
thiserror = "1"
futures-util = { version = "0.3", features = [ "io" ]}
log = "0.4.4"
mint = "0.5"
rgb = "0.8.12"
string-interner = { version = "0.12.2", default-features = false, features = ["backends", "inline-more", "std"] }
anyhow = "1"

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }