[package]
name = "fbxcel-writer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fbxcel-pull-parser = { path = "../fbxcel-pull-parser" }
fbxcel-low = { path = "../fbxcel-low", features = [ "writer" ] }
log = "0.4"
thiserror = "1"
futures-lite = "1.2"
async-compression = { version = "0.3", features = [ "zlib", "futures-io" ] }

[dev-dependencies]
async-std = { version = "1.11", features = ["attributes"] }

[features]
default = []
tree = []